grammar.txt
grammar = "START DEVICES", devicelist, "END DEVICES", "START CONNECTIONS", connectionlist, "END CONNECTIONS", "START MONITOR", monitorlist, "END MONITOR";

devicelist = device, {device};
device = name, "=", object, [",", "ip=", number], [",", "init=", number], [",", "simcycle=", number], ";";
name = word, "_", number;
word = letter, {letter};
letter = "A"|"B"|"C"|"D"|"E"|"F"|"G"|"H"|"I"|"J"|"K"|"L"|"M"|"N"|"O"|"P"|"Q"|"R"|"S"|"T"|"U"|"V"|"W"|"X"|"Y"|"Z";
number = digit, {digit};
digit = "0"|"1"|"2"|"3"|"4"|"5"|"6"|"7"|"8"|"9";
object = "CLOCK"|"SWITCH"|"AND"|"NAND"|"OR"|"NOR"|"DTYPE"|"XOR";

connectionlist = connection, {connection};
connection = output, “->”, input, {",", input}, “;”;
output = name, [".", outputname];
outputname = "Q"|"QBAR";
input = name, ".", inputname;
inputname = inputsig|"DATA"|"CLK"|"SET"|"CLEAR";
inputsig = "I", number;
 
monitorlist = output, [",", output], ";";
